Try to be a CSS king :D

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <span>Yet another useless PHP framework</span>
             <a class="std-button" href="https://github.com/phphun#oue-c-pafini">
               Work in progress on Github
+              <div class="notif">Yeah drop some stars !</div>
             </a>
         </div>
         </div>
