Try to be a CSS king 2 :D

--- a/index.html
+++ b/index.html
@@ -6,20 +6,37 @@
     <title>PHUN</title>
   </head>
 
-  <body class="landing-layout bg-black font-white">
+  <body class="landing-layout">
     <div class="content">
-      <div class="extended-cover phun-title">
-        <div class="cover"">
-          <div>
-            <h1>phun</h1>
-            <span>Yet another useless PHP framework</span>
-            <a class="std-button" href="https://github.com/phphun#oue-c-pafini">
-              Work in progress on Github
-              <div class="notif">Yeah drop some stars !</div>
-            </a>
+      <div class="extended-semi-cover phun-title">
+
+        <div>
+          <h1>phun</h1>
+          <span>Yet another useless PHP framework</span>
+          <a class="std-button" href="https://github.com/phphun#oue-c-pafini">
+            Work in progress on Github
+            <div class="notif">Yeah drop some stars !</div>
+          </a>
         </div>
-        </div>
+
       </div>
+      <div class="semi-footer grid">
+        <div class="line-two">
+          <div>
+            <h3>Implemented features</h3>
+            <ul>
+              <li>Partial Typesafe DOM builder</li>
+              <li>Typed HTTP Parameters</li>
+            </ul>
+          </div>
+          <div>
+            <h3>WIP features</h3>
+            <ul>
+              <li>Formatted URL</li>
+              <li>Service Routing</li>
+            </ul>
+          </div>
+        </div>
     </div>
 
 
